Bug #6056 | Can't shutdown mysqld | ||
---|---|---|---|
Submitted: | 13 Oct 2004 2:00 | Modified: | 21 Dec 2004 6:10 |
Reporter: | Jorge del Conde | Email Updates: | |
Status: | Closed | Impact on me: | |
Category: | MySQL Server | Severity: | S3 (Non-critical) |
Version: | 4.1 | OS: | Windows (Win32) |
Assigned to: | Vasily Kishkin | CPU Architecture: | Any |
[13 Oct 2004 2:00]
Jorge del Conde
[24 Nov 2004 9:08]
Vasily Kishkin
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release. If necessary, you can access the source repository and build the latest available version, including the bugfix, yourself. More information about accessing the source trees is available at http://www.mysql.com/doc/en/Installing_source_tree.html