BUG#6056 fixed MySQL can't clean shutdown with --shared-memory